--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "slick-slider": "^1.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
